--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
+streamlit
+pandas
+matplotlib
+numpy
+fpdf2
+st-gsheets-connection
 
-streamlit==1.28.0
-pandas==2.0.3
-numpy==1.24.3
-
-plotly==5.17.0
